--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="sidebar-info">
 
                 <figure class="avatar-box">
-                    <img src="c:\Users\AS\Downloads\LInked.jpg" alt="Ahmed Mahmoud" width="3">
+                    <img src="./assets/images/LInked.png" alt="Ahmed Mahmoud" width="3">
 
                 </figure>
 
@@ -65,20 +65,17 @@
                 <div class="separator"></div>
 
                 <ul class="contacts-list">
-
                     <li class="contact-item">
-
                         <div class="icon-box">
                             <ion-icon name="mail-outline"></ion-icon>
                         </div>
-
                         <div class="contact-info">
                             <p class="contact-title">Email</p>
-
-                            <a href="Ahmedmamoud148@gmail.com" class="contact-link">Ahmedmamoud148@gmail.com</a>
+                            <a href="mailto:Ahmedmamoud148@gmail.com" class="contact-link">Ahmedmamoud148@gmail.com</a>
                         </div>
-
                     </li>
+                </ul>
+                
 
                     <li class="contact-item">
 
@@ -136,7 +133,7 @@
                     <ul class="social-list">
 
                         <li class="social-item">
-                            <a href="https://github.com/Ahmedma7moud12" class="social-link">
+                            <a href="https://github.com/AhemdMahmoud" class="social-link">
                                 <ion-icon name="logo-github"></ion-icon>
                             </a>
                         </li>
