--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="sidebar-info">
 
                 <figure class="avatar-box">
-                    <img src="./assets/images/LInked.png" alt="Ahmed Mahmoud" width="3">
+                    <img src="https://github.com/AhemdMahmoud/My_Home/blob/ad076a2ce1d10bee192c8042eccec8210288fef8/assets/images/152-bar-chart-arrow-growth%20(1).svg" alt="Ahmed Mahmoud" width="3">
 
                 </figure>
 
